Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(boolean var)
    end
end
